--- a/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
@@ -9,18 +9,18 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="like-a-fox-touch-icon" sizes="180x180" href="../src/assets/like-a-fox-touch-icon.png">
-    <link rel="shortcut icon" type="image/png" href="../src/assets/favicon-fox.ico"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/assets/favicon-fox-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/assets/favicon-fox-16x16.png">
-    <link rel="icon" type="image/x-icon" href="../../wwwroot/favicon-fox.ico">
+    <link rel="like-a-fox-touch-icon" sizes="180x180" href="../src/assets/like-a-fox-touch-icon.png?=v2">
+    <link rel="shortcut icon" type="image/png" href="../src/assets/favicon-fox.ico?=v2"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="../src/assets/favicon-fox-32x32.png?=v2">
+    <link rel="icon" type="image/png" sizes="16x16" href="../src/assets/favicon-fox-16x16.png?=v2">
+    <link rel="icon" type="image/x-icon" href="../../wwwroot/favicon-fox.ico?=v2">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta name="theme-color" content="#1976d2">
     <link rel="manifest" href="../src/assets/site.webmanifest.json">
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="urlpath" />
-    <meta property="og:image" content="../src/assets/like-a-fox-touch-icon.png" />
+    <meta property="og:image" content="../src/assets/like-a-fox-touch-icon.png?=v2" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="180" />
 
