--- a/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" type="image/png" href="../src/assets/favicon-fox.ico?=v2"/>
     <link rel="icon" type="image/png" sizes="32x32" href="../src/assets/favicon-fox-32x32.png?=v2">
     <link rel="icon" type="image/png" sizes="16x16" href="../src/assets/favicon-fox-16x16.png?=v2">
-    <link rel="icon" type="image/x-icon" href="../../wwwroot/favicon-fox.ico?=v2">
+    <link rel="icon" type="image/x-icon" href="../assets/favicon-fox.ico?=v2">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta name="theme-color" content="#1976d2">
     <link rel="manifest" href="../src/assets/site.webmanifest.json">
