--- a/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head prefix="og: http://ogp.me/ns#">
-    <title>LikeAFoxAspNg</title>
+    <title>Like A Fox Development</title>
 
     <base href="/" />
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/x-icon" href="../assets/favicon-fox.ico?=v2">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta name="theme-color" content="#1976d2">
-    <link rel="manifest" href="../src/assets/site.webmanifest.json">
+    <link rel="manifest" href="../assets/site.webmanifest.json">
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="urlpath" />
