name changes for ico

--- a/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
+++ b/src/LikeAFoxAspNg.Web/ClientApp/src/index.html
@@ -9,22 +9,22 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="like-a-fox-touch-icon" sizes="180x180" href="../src/assets/like-a-fox-touch-icon.png?=v2">
-    <link rel="shortcut icon" type="image/png" href="../src/assets/favicon-fox.ico?=v2"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/assets/favicon-fox-32x32.png?=v2">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/assets/favicon-fox-16x16.png?=v2">
-    <link rel="icon" type="image/x-icon" href="../assets/favicon-fox.ico?=v2">
+    <link rel="favicon-touch-icon" sizes="180x180" href="../src/assets/favicon-touch-icon.png?=v2">
+    <link rel="shortcut icon" type="image/png" href="../src/assets/favicon.ico?=v2"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="../src/assets/favicon-32x32.png?=v2">
+    <link rel="icon" type="image/png" sizes="16x16" href="../src/assets/favicon-16x16.png?=v2">
+    <link rel="icon" type="image/x-icon" href="../src/assets/favicon.ico?=v2">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta name="theme-color" content="#1976d2">
-    <link rel="manifest" href="../assets/site.webmanifest.json">
+    <link rel="manifest" href="../src/assets/site.webmanifest.json">
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="urlpath" />
-    <meta property="og:image" content="../src/assets/like-a-fox-touch-icon.png?=v2" />
+    <meta property="og:image" content="../src/assets/favicon-touch-icon.png?=v2" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="180" />
 
-    <meta name="msapplication-square150x150logo" content="../src/assets/like-a-fox-150x150.png" />
+    <meta name="msapplication-square150x150logo" content="../src/assets/favicon-150x150.png" />
     <link rel="edituri" type="application/rsd+xml" title="RSD" href="~/rsd.xml" />
     <link rel="alternate" type="application/rss+xml" href="~/feed/rss/" />
     <link rel="alternate" type="application/atom+xml" href="~/feed/atom/" />
